--- a/clases-hipopresivos.html.twig
+++ b/clases-hipopresivos.html.twig
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Entra en ictiva para empezar tus clases de abdominales hipopresivo</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Entra en ictiva para empezar tus clases de abdominales hipoporesivo</h2>
                     <p class="text-white text-medium mb-5">Descubre todos los beneficios de las clases de gimnasia hipopresiva y entrena en casa</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -369,7 +369,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">¿Sabes de qué se trata el deporte que tanto está de moda, que incluso los famosos lo usan para ponerse en forma en casa? Se trata de hacer clases de abdominales hipopresivos. Son un tipo de ejercicio abdominal con el que se tonifica y reduce la cintura a través de la respiración, la apnea, y manteniendo la posición.</p>
                     <p class="mb-3 ls text-medium">Son fáciles de hacer y todo el mundo puede hacerlos ya que no son muy intensos, además, aportan una gran cantidad de beneficios al cuerpo, pero hay que ejecutar la técnica correctamente para evitar posibles lesiones. Es por esto que es muy importante seguir el curso <a href="https://www.ictiva.com/ejercicios-hipopresivos/" class="text-primary">ejercicios hipopresivos</a> paso a paso.</p>
                     <p class="mb-3 ls text-medium">Gracias a ictiva, podrás seguir estas tablas de ejercicios y rutinas muy efectivas dónde quieras. Te sorprenderá lo fácil que es seguir las clases e iniciarte en este deporte. Así que, ¡no lo dudes más y empieza hoy con tu entrenamiento en casa y ponte en forma!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -385,7 +385,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para qué todo el mundo se sienta identificado y encuentre los ejercicios que busca que se adapten a su estado de forma físico y sus objetivos en ictiva hemos preparado un curso ejercicios hipopresivos con varios niveles de dificultad.</p>
                     <p class="mb-3 ls text-medium">Es muy importante que cada usuario empiece con el nivel que le corresponda, para que el cuerpo se pueda adaptar correctamente a la práctica de este deporte y pueda progresar a su debido tiempo.</p>
                     <p class="mb-3 ls text-medium">Los niveles de dificultad que encontrarás en nuestras clases de abdominales hipopresivos son: principiante, básico, medio y avanzado. En el primer nivel te explicaremos las nociones básicas que hay que saber y cómo conseguir la postura correcta. A medida que vayas progresando y aprendiendo la técnica, podrás ir subiendo de nivel.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Con este curso hipopresivos aprenderás los 4 pasos básicos de esta técnica, de forma fácil y sencilla para que puedas hacer las clases de abdominales hipopresivos, a través de vídeos didácticos.</p>
                     <p class="mb-3 ls text-medium">Además en estos vídeos te proporcionaremos información con relación al ejercicio que estás realizando, como por ejemplo, a qué disciplina pertenece, cuántas calorías vas a quemar haciéndolo, cuánto dura el vídeo, el material necesario para hacerlo y el nivel de dificultad que tiene.</p>
                     <p class="mb-3 ls text-medium">Con tanta información y poniéndolo tan fácil, ya no tienes excusa para empezar los ejercicios en casa desde hoy.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -418,7 +418,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que puedas llevar tus clases de <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=home&utm_medium=google-play&utm_campaign=ictiva&utm_content=" class="text-primary">gimnasia hipopresiva</a> dónde quieras hemos desarrollado una aplicación móvil para que la tengas a mano siempre que quieras. Esta aplicación está disponible tanto para Android como para iOS, en Google Play y Apple store respectivamente.</p>
                     <p class="mb-3 ls text-medium">Es una de las más completas del mercado, porque a parte de tener el curso hipopresivos también incluye más de 800 vídeosesiones de más de 21 disciplinas diferentes. Además, descargarla es gratis y al registrarte tendrás acceso a más de 50 vídeos gratis para que pruebes las disciplinas que más te gustan tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Pero eso no es todo, a parte del curso abdominales <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&utm_campaign=ictiva&utm_content=" class="text-primary">hipopresivos</a> te proporcionamos información sobre tu evolución física, como por ejemplo los cambios en tu IMC, de tu peso, las calorías que has quemado y el tiempo total que has estado realizando las actividades entre otros. Esta información te será muy útil para asegurarte que vas por el buen camino.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -435,7 +435,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En Facebook encontrarás grupos específicos en función del objetivo del grupo, así que no lo dudes más y únete al resto de usuarios que siguen las clases y motívate con ellos.</p>
                     <p class="mb-3 ls text-medium">Si quieres tener más información a través de noticias de estas clases o de las demás temáticas deportivas de ictiva, sigue nuestro blog donde iremos colgando con frecuencia artículos de blog sobre salud, deporte y bienestar.</p>
                     <p class="mb-3 ls text-medium">Esta información te ayudará a maximizar los beneficios del curso gimnasia hipopresiva, haciendo que alcances tu objetivo más rápido.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -452,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es una técnica de poca intensidad, pero debemos asegurarnos que somos capaces a nivel de forma física que podemos hacerlo. Una vez tenemos el visto bueno, ya podemos empezar el curso abdominales hipopresivos.</p>
                     <p class="mb-3 ls text-medium">Además, te recordamos que tienes que seguir las instrucciones de los profesores en los vídeos en todo momento, ya que el cumplimiento de las mismas, es bajo tu propia responsabilidad.</p>
                     <p class="mb-3 ls text-medium">La información sobre el gasto de calorías que vas a quemar la realizar el curso gimnasia hipopresiva es aproximado. En iciva, no nos hacemos responsables del mal uso que le puedas dar a nuestra plataforma y no garantizamos los resultados.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
