--- a/ejercicios-para-perder-peso.html.twig
+++ b/ejercicios-para-perder-peso.html.twig
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -276,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white text-medium mb-5">Aprende a hacer ejercicios para perder peso en casa de manera sencilla</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Si quieres perder peso rápido entra y descubre cómo</h2>
                     <p class="text-white text-medium mb-5">En ictiva te damos todas las claves para adelgazar en casa rápidamente, con planes de entreno y ejercicios diarios a través de videosesiones.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -365,7 +365,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Si lo que buscas es una rutina para poder perder peso desde casa, estás en el lugar adecuado. En ictiva, tu gimnasio online, hemos preparado varias rutinas de <a href="https://www.ictiva.com/" class="text-primary">ejercicios para hacer en casa</a> con las que podrás perder peso en la comodidad de tu hogar y tenemos 4 disciplinas con las que podrás quemar grasa y adelgazar rápidamente. Puedes elegir una rutina, o hacer ejercicios de las 4 disciplinas para quemar grasas, o una combinación de ambos para que te sea más ameno.</p>
                     <p class="mb-3 ls text-medium">Nuestros entrenadores, profesionales en cada especialidad, han preparado un plan de entrenamiento en función de los objetivos de cada participante y de su condición física o sus particularidades. Por ejemplo, si eres un hombre y quieres perder peso rapido, con la rutina lose weight man podrás adelgazar rapidamente en casa con ejercicios específicos para hombres.</p>
                     <p class="mb-3 ls text-medium">Las mujeres, encontrarán en la rutina lose weight woman, los ejercicios que necesitan para lograr perder peso en casa y tener un cuerpo 10. Ya no tendrás excusa para no hacer ejercicios y adelgazar en casa. Ictiva te lo pone fácil.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -380,7 +380,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">¿Cómo están organizados los planes de entrenamiento?</h2>
                     <p class="mb-3 ls text-medium">Si eliges <a href="https://www.ictiva.com/ejercicios-para-bajar-de-peso/" target="_blank" class="text-primary">ejercicios para bajar de peso</a> en casa con una de nuestras disciplinas, encontrarás: aeróbic, combat, TBC (Total Body Conditioning) y Steps. Estas disciplinas están enfocadas a quemar calorías rápidamente. En estas disciplinas encontrarás ejercicios de varios niveles de dificultad diferentes: principiante, básico, medio, avanzado y Pro. Para que puedas empezar con el nivel acorde a tu condición física y poder subir de nivel según vayas avanzando con tu entrenamiento para perder peso.</p>
                     <p class="mb-3 ls text-medium">Los planes de entrenamiento constan de sesiones de entrenamiento de 8 semanas, empezando con ejercicios sencillos y cortos para ir aumentando su dificultad y duración según vayan pasando los días, para que el cuerpo pueda seguir evolucionando y según se vaya adaptando a los ejercicios. Porque para que una rutina de entrenamiento sea eficaz, hay que ir subiendo la dificultad y la duración de los ejercicios a medida que pasa el tiempo, si no el cuerpo se acostumbra y no realiza el esfuerzo necesario para perder peso rapido y se pierde la eficacia de los ejercicios.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -396,7 +396,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">El espacio y al material que vas a necesitar para poder realizar tu rutina de ejercicios para perder peso en casa, es escaso. En ictiva hemos pensado en todo, y el material que vas a necesitar en la mayoría de ejercicios va a ser tu propio cuerpo para hacer levantamiento de peso, o tres o cuatro complementos básicos que no ocupan espacio y no son caros.</p>
                     <p class="mb-3 ls text-medium">En cada vídeo informamos del material que se va a utilizar durante esa sesión por lo que podrás estar preparado antes de empezar con el entrenamiento.</p>
                     <p class="mb-3 ls text-medium">Respecto al espacio, podrás practicar nuestros ejercicios sin problema en el salón de casa o en la habitación porque no se hacen grandes movimientos. Así que eso no será un problema. Además, también podrás hacer los ejercicios fuera de casa, en el trabajo, en un parque, de paseo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -412,7 +412,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para poder complementar la rutina para perder peso en casa de la mejor manera, lo mejor es hacerlo con una buena dieta. Que ayude a quemar calorías incluso cuando comemos. De esta manera, alcanzarás tus objetivos rápidamente y estarás más sano.</p>
                     <p class="mb-3 ls text-medium">Pero no te preocupes, porque ictiva, una vez más ha pensado en ello y te ha facilitado las cosas creando el apartado “Dietas”. Dónde encontrarás una gran variedad de dietas, según tus objetivos, entre ellas, las dietas específicas para perder peso.</p>
                     <p class="mb-3 ls text-medium">Cada régimen consta de 5 comidas diarias y te explicamos paso a paso cómo hacer cada plato, son fáciles y rápidos de preparar, con lo que todo el mundo podrá comer sano en casa. Además, te damos la información nutricional que aporta cada plato a tu organismo y te proponemos platos para sustituir aquellos que no te gusten o que no puedes comer por razones médicas.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -429,7 +429,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Nuestra aplicación con el entrenamiento para perder peso es una de las más completas, ya que no solo tendrás acceso a los ejercicios de esta disciplina, sino que además podrás acceder a otras 20 disciplinas diferentes.</p>
                     <p class="mb-3 ls text-medium">Además, al descargarla tendrás acceso a más de 50 vídeos gratuitos para que pruebes tantas veces como queráis las disciplinas que más te gusten. Una vez te hayas abonado, podrás acceder a más de 800 vídeosesiones. También te proporcionamos información sobre tu IMC, las calorías que quemas, los vídeos que ves y el peso que has perdido, para que sepas cómo va tu evolución.</p>
                     <p class="mb-3 ls text-medium">No lo dudes más y descárgate ya nuestra aplicación para Android en Google Play y en el Apple Store para iOS.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Además, en Facebook hemos creado grupos específicos en función del objetivo de los integrantes del grupo para que todo el mundo encuentre el grupo que le corresponde, entre otros uno para los que realizan entrenamiento para perder peso. Entre todos, os daréis la motivación extra que necesitáis.</p>
                     <p class="mb-3 ls text-medium">En el blog encontrarás las últimas publicaciones sobre deporte, salud y bienestar. También te daremos consejos para que los apliques mientras haces la rutina de ejercicios para perder peso y para que puedas mejorar la eficacia de tus entrenamientos.</p>
                     <p class="mb-3 ls text-medium">Gracias a esta comunidad, no te sentirás solo y tendrás la motivación extra que te ayudará a alcanzar tus objetivos. ¡Búscanos ya en las redes sociales!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
