--- a/entrenamiento-funcional.html.twig
+++ b/entrenamiento-funcional.html.twig
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">El entreno ideal para para cuidar tu cuerpo como se merece.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Empieza a hacer ejercicios funcionales en casa con ictiva</h2>
                     <p class="text-white text-medium mb-5">El entrenamiento funcional te ayuda a tonificar y muscular el cuerpo</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -369,7 +369,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La gimnasia funcional consiste en entrenar con un propósito, en realizar ejercicios durante una sesión de deporte que sean útiles para la vida cotidiana, para que el cuerpo esté preparado para hacer de forma más ágil y sin complicaciones los movimientos que repite más a lo largo del día. Se podría decir que es una mezcla de deporte y vida diaria puesto que los ejercicios simularán los movimientos que hace el deportista en su rutina diaria.</p> 
                     <p class="mb-3 ls text-medium">Ésta es una disciplina que ha aparecido hace relativamente poco porque nace de una necesidad. La mayoría de la gente cuando entrena ve que los ejercicios están pensados para potenciar una cualidad: fuerza, flexibilidad, velocidad, resistencia, etc. Que son cualidades que necesitan los deportistas de élite o los que compiten, pero no la gente que hace deporte para estar en forma y que no participa ningún tipo de competición, por lo que estas rutinas no se adaptan a sus necesidades que son preparar el cuerpo para lo que ellos están acostumbrados a hacer o lo que necesitan a hacer en su día a día.</p> 
                     <p class="mb-3 ls text-medium">Es por esto que han empezado a elaborar rutinas con ejercicios funcionales que se adapten a este tipo de gente, que somos la gran mayoría.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -385,7 +385,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">El entrenamiento funcional ejercicios quiere mejorar el día a día de las personas que lo practican y con él los hábitos de vida. En vez contar con ejercicios que trabajan una parte del cuerpo solamente, está formado por ejercicios que hacen trabajar un grupo muscular, de esta forma nos aseguramos que vamos a desarrollar todos los músculos correctamente. Logrando una sesión más completa y un cuerpo más bonito a nivel estético, porque si sobre-entrenamos una parte la vamos a desarrollar más que las otras y eso no queda bien.</p> 
                     <p class="mb-3 ls text-medium">De ahí la importancia de elaborar rutinas adaptadas a cada usuario y a sus objetivos, que se puedan personalizar y se ajustan a lo que uno va a necesitar en su vida diaria. De nada sirve entrenar como un deportista de élite si no vamos a necesitar aplicarlo en nuestra vida.</p> 
                     <p class="mb-3 ls text-medium">Para ello hay que contar con profesionales que saben escuchar sus alumnos y que hacen lo mejor para ellos, en ictiva contamos con los mejores profesionales de cada disciplina que elaboran planes de entrenamiento adaptados a cada uno. En nuestra página web encontraréis videosesiones basadas en este método que son muy útiles para nuestros usuarios.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Ictiva ha elaborado una serie de dietas en función de los objetivos que tienen los usuarios para que cada uno de ellos encuentre el régimen que necesita.</p> 
                     <p class="mb-3 ls text-medium">Estas dietas están formadas por 5 comidas diarias, en cada una de ellas encontrarás la receta para que puedas hacerla en casa sin problema, son muy fáciles de hacer y muy sabrosas. También verás la información nutricional de cada plato.</p> 
                     <p class="mb-3 ls text-medium">Como puedes ver ictiva te ofrece una solución para que cuides tu <a href="https://www.ictiva.com/salud/" target="_blank" class="text-primary">salud y bienestar</a> de forma global, haciendo deporte, motivándote, y ayudándote a comer mejor. ¿Quién te da más? No lo dudes más y descubre qué platos forman tu dieta en nuestra aplicación o en la página web.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Como ves es más beneficioso hacer deporte que te sirve para tu vida diaria que no llegar al gimnasio y hacer ejercicios de máquinas con los que solo ganarás músculo sin que te sirva para tu vida cotidiana.</p> 
                     <p class="mb-3 ls text-medium">Si descargas nuestra aplicación podrás hacer <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" target="_blank" class="text-primary">gimnasia funcional</a> donde quieras, es gratuita, puedes hacerlo en Apple Store si tiene iOS o en Google Play si tienes Android. Tendrás acceso a 50 vídeos gratis de 21 disciplinas diferentes, si te abonas serán más de 800 videosesiones. Además, podrás ver cómo progresas gracias a gráficos y estadísticas que muestran los cambios de tu IMC, de tu peso, de las calorías que has quemado, los vídeos que has visto y mucha más información.</p> 
                     <p class="mb-3 ls text-medium">Esto te ayudará a tener una experiencia de deporte completa, con una sola aplicación lo tendrás todo controlado, como ves, ictiva te ofrece el pack completo, empieza hoy a usarlo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que encuentres la motivación extra que necesitas no dudes en unirte a nuestras redes sociales Facebook, Twitter, Instagram, YouTube, allí podrás resolver las dudas que tengas, compartir los progresos que hagas con el entrenamiento funcional y estar al día de las últimas novedades.</p> 
                     <p class="mb-3 ls text-medium">En Facebook encontrarás grupos específicos de gente que tiene los mismos objetivos, para que podáis animaros unos a otros.</p> 
                     <p class="mb-3 ls text-medium">Ahora que ya sabéis qué es el entreno funcional no dejéis de entrar en nuestro blog para profundizar en el tema y estar al día sobre las últimas noticias de deporte, salud y bienestar. También encontraréis consejos para mejorar vuestras sesiones deportivas.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -453,7 +453,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Recordad que tenéis que seguir las instrucciones que os dan los profesores para hacer los ejercicios, para que no os lesionéis, ya que sois vosotros mismos los responsables de seguirlas.</p> 
                     <p class="mb-3 ls text-medium">La información que os proporcionamos de las calorías que vais a quemar haciendo los ejercicios es orientativa, puesto que depende de varios factores. Ictiva no se hace responsable del uso indebido de sus plataformas y no garantiza los resultados.</p> 
                     <p class="mb-3 ls text-medium">¡Si sigues estos consejos entrenarás de forma óptima! Entra ahora en nuestra web y empieza a hacer ejercicio.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
