--- a/operacion-bikini.html.twig
+++ b/operacion-bikini.html.twig
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Operación Bikini</h1>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">LUCE CUERPO ESTE VERANO</h2>
                     <p class="text-white text-medium mb-5">Planes de entrenamiento con videosesiones y planes nutricionales para ponerte en forma este verano.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -308,7 +308,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Tonifica tus músculos.</li>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Aliméntate correctamente.</li>
                 </ul>
-                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento Ahora</a></p> -->
+                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento Ahora</a></p> -->
             </div>
         </div>
     </section>
@@ -357,7 +357,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Nuestro equipo, especialista en las últimas tendencias para <a class="text-primary" href="http://ictiva.com/hacer-ejercicio-en-casa/">hacer ejercicios en casa</a>, ha diseñado unas rutinas especiales con diversos objetivos para la <strong>Operación Bikini</strong>.  Porque eres única y, como sabes, no hay dos personas iguales; por lo tanto, hemos diseñado diferentes objetivos para que escojas el que más te represente, ya sea con el fin de ponerte en forma y/o perder esos kilos de más. Así que si lo que has pensado es: "este verano voy a lucir cuerpo" no dudes en escoger un <strong>plan de entrenamiento</strong> y empezar hoy mismo a sudar la camiseta de una manera divertida, hasta llegar a tu objetivo: ¡ESTE AÑO LO CONSEGUIRÁS!</p>
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">¿EN QUÉ CONSISTE ESTAS RUTINAS DE ENTRENAMIENTO?</h2>
                     <p class="mb-3 ls text-medium">Una <strong>operación bikini</strong> con ejercicios en casa y dietas. Para poder lucir cuerpo en bikini, y sentirte bien en la playa, puedes poner en práctica esta tabla de ejercicios diaria, para hacer en tu casa y a tu propio ritmo. Verse bien es posible con ictiva, regístrate y apúntate a la última tendencia: ¡La operación bikini en casa!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -378,7 +378,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">TBC</span>: Una dura disciplina dirigida por Laura Navajas. PondráS tu cuerpo al límite con ejercicios funcionales.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">Abdominales</span>: Enfocada única y exclusivamente a una de las zonas más problemáticas: abdominal. Tonificarás la zona abdominal con las clases de Elena Guerrero.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">Steps</span>: Ejercicio vardiovascular enfocada al tren inferior. Te olvidarás de la celulitis y las piernas cansaddas.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">TBC</span>: Laura Navajas será la encargada de llevar tu cuerpo al límite con estos duros ejercicios funcionales. El éxito está asegurado.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium"><span class="text-primary">Fitness Girl</span>: Ejercicios dinámicos de fitness, tanto globales como en músculos aislados. Rebeca Mena y Sandra Rojo son las monitoras encargadas de ayudarte.</p>
                     <p class="mb-3 ls text-medium"><span class="text-primary">Abdominales</span>: Enfocado única y exclusivamente a tonificar la zona abdominal. Conseguirás un vientre plano y/o tu six-pack.</p>
                     <p class="mb-3 ls text-medium"><span class="text-primary">Cuerpo Perfecto</span>: Rutinas de ejercicios clásicos del fitness, pero llevados más al extremo. Jonathan Bueno te guiará en las videosesiones.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -438,7 +438,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Tendréis varias dietas disponible que podéis realizar para poder cumplir vuestro objetivo con más facilidad: Perder peso, Tonificar vuestro cuerpo, ganar masa muscular.</p>
                     <p class="mb-3 ls text-medium">Estas dietas suelen estar divididas en 5 comidas: Desayuno, almuerzo a media mañana, comida, merienda y cena.</p>
                     <p class="mb-3 ls text-medium">Para terminar de cumplimentar vuestro plan nutricional en la operación bikini, también disponéis de un apartado de recetas, donde ver como se realizan diferentes platos, con su respectiva información nutricional.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -454,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">¿Cuáles son los ejercicios ideales para la <strong>operación bikini</strong>? En ictiva disponemos de la aplicación en la tienda de Google Play de <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=ictiva&utm_medium=operacion-bikini" class="text-primary">entrenamiento en casa para mujeres</a>. También encontrarás nuestro <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=ictiva&utm_medium=operacion-bikini" class="text-primary">gimnasio en casa para mujeres</a> en la Apple Store.</p>
                     <p class="mb-3 ls text-medium">Ningún rincón se te resistirá a la hora de practicar tus ejercicios. Puedes escoger el que más te guste o el que mejor se adapte a tus circunstancias. Tanto si estás de viaje o en tu domicilio, como si te gusta practicar esta disciplina al aire libre en lugar inspirador, llévate la aplicación en el bolsillo y empieza a beneficiarte de nuestros planes de entrenamiento.</p>
                     <p class="mb-3 ls text-medium">¡Empieza ya tu propia <strong>Operación Bikini</strong> y luce la mejor versión de ti misma este verano!  ¿Te apuntas?</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
