--- a/ejercicios-de-crossfit.html.twig
+++ b/ejercicios-de-crossfit.html.twig
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Descubre el entrenamiento de alta intensidad que tanto gusta</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Empieza hoy tu entrenamiento crossfit y presume de cuerpo.</h2>
                     <p class="text-white text-medium mb-5">Ponte en forma en pocas semanas con las videosesiones virtuales de ictiva.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -369,7 +369,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Si estás buscando una disciplina deportiva que te meta caña, con la que puedas ver los resultados en poco tiempo y que no te resulte aburrida, la rutina crossfit es lo que estabas buscando.</p>
                     <p class="mb-3 ls text-medium">Esta es una disciplina que te hace entrenar a alta intensidad a través de ejercicios funcionales, usa ejercicios de otras modalidades como por ejemplo el combat o el running, por lo que las videosesiones no serán para nada aburridas y cada día serán diferentes. Gracias a esto, también te permite entrenar todo el cuerpo.</p>  
                     <p class="mb-3 ls text-medium">Además, otra de las ventajas de los ejercicios crossfit en casa de ictiva es que no necesita prácticamente ningún material, ya que en la mayoría de ellos vamos a usar el propio peso del cuerpo para hacer las repeticiones, por lo que además de hacerlo ideal para practicar estos <a href="https://www.ictiva.com/" target="_blank" class="text-primary">ejercicios en casa</a> también lo es para hacerlo en el exterior.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -385,7 +385,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Si pensaba que para hacer este deporte debías ir al gimnasio y que requiere una gran inversión de dinero te daremos una buena noticia. Gracias a nuestro gimnasio online ictiva podrás hacerlo en casa y sin tener que invertir mucho dinero, ya que no necesitarás mucho material, harás la mayoría de los ejercicios con el peso de tu cuerpo.</p> 
                     <p class="mb-3 ls text-medium">Puedes ponerte en el salón de casa o en una sala en el trabajo aprovechando un descanso. Tiene que haber suficiente espacio para que te puedas mover libremente en caso que el ejercicio requiera amplios movimientos.</p>
                     <p class="mb-3 ls text-medium">En nuestro apartado de <a href="https://www.ictiva.com/ejercicios-en-casa/proximamente-crossfitness/" target="_blank" class="text-primary">videos de crossfit</a> en casa encontrarás sesiones a partir de un nivel medio, si no tienes el nivel necesario puedes prepárate con otras disciplinas y cuando tengas el nivel adecuado empezar con esta. Según vayas subiendo de nivel, puedes hacer el nivel avanzado y Pro. Cada rutina crossfit en casa suele durar entre 15 y 30 minutos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Entre los ejercicios crossfit que puedes hacer con ictiva encontrarás uno muy sencillo, se trata de realizar saltos con las piernas juntas y un poco dobladas (no hay que saltar muy alto) y con los brazos ligeramente doblados a los lados de forma que las manos queden a la altura de las caderas. Cuando demos un salto y estemos arriba, daremos un par de golpes a las caderas con las manos.</p> 
                     <p class="mb-3 ls text-medium">Otro ejercicio que forma parte del entrenamiento crossfit en casa es el Crunch, para realizarlo hay que sentarse sobre una esterilla, con los pies juntos de modo en que las palmas de los pies se toquen. Llevaremos nuestro cuerpo hacia atrás, hasta que la espalda toque el suelo (sin que las piernas se muevan) y a su vez llevaremos los brazos por encima de la cabeza (cada uno por un lado) hasta que las manos toquen el suelo.</p> 
                     <p class="mb-3 ls text-medium">Si buscas uno con material, puedes empezar con el Wall ball shot, que se hace con un balón medicinal. Para hacerlo ponte de pie con los pies separados un poco más del ancho de las caderas y sujeta el balón medicinal con las dos manos. Baja el balón al suelo y apóyate en él con las manos, vigila que la espalda esté recta en todo momento para no lesionarte, y cuando estés apoyado al suelo de un salto lleva tus piernas atrás. En un salto vuelve a poner las piernas en la posición inicial con las rodillas ligeramente flexionadas, al subir lanza el balón un poco hacia arriba por encima de tu cabeza y al cogerlo vuelve a empezar.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -418,7 +418,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para ello hemos desarrollado un apartado dónde hemos incluido una serie de dietas entre las cuales encontrarás una que se adapte a tu estado físico actual y que te ayude a lograr tus objetivos de crossfitness.</p> 
                     <p class="mb-3 ls text-medium">Verás que son dietas de 5 platos al día y que en cada uno de ellos encontrarás los pasos a seguir para prepararlos en casa, son muy fáciles, rápidos y muy sabrosos. Si alguno de ellos no puedes prepararlo por razones médicas o porque no te gusta, puedes sustituirlo por otro que te sugerimos.</p> 
                     <p class="mb-3 ls text-medium">También te ponemos el valor nutricional que te aporta cada plato para que sepas en todo momento las calorías que estás ingiriendo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -435,7 +435,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La puedes descargar gratuitamente en Apple Store si tiene iOS o en Google Play si tienes Android, aparte de los ejercicios crossfit podrás ver otros 50 vídeos gratis tantas veces como quieras de 2 disciplinas diferentes.</p> 
                     <p class="mb-3 ls text-medium">Si decides abonarte tendrás acceso a más de 800 videosesiones. Además, también tendrás un seguimiento de tu evolución a través de gráficos y estadísticas que muestras tu IMC, tu peso, las calorías que has quemado haciendo los vídeos, y mucho más.</p> 
                     <p class="mb-3 ls text-medium">Gracias a esta aplicación, que es una de las más completas del mercado tendrás tus sesiones de crossfitness y un entrenador personal en el bolsillo, ¿a qué esperas para descargarte y empezar hoy tu entrenamiento?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -452,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Sigue las instrucciones de nuestros profesores porque tú eres el responsable de seguirlas correctamente. Si lo haces como es debido reducirás el riesgo de sufrir una lesión.   </p> 
                     <p class="mb-3 ls text-medium">Las calorías que vas a quemar son indicativas, ya que de ellos dependen varios factores. Ictiva no se hace responsable del uso indebido de sus plataformas y no garantiza los resultados.</p> 
                     <p class="mb-3 ls text-medium">Pon en práctica estos consejos y saca el máximo partido a tus sesiones de entrenamiento en casa. No lo dudes más y entra ahora a ictiva, tu gimnasio online, y elige el vídeo que quieres ver.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
